Replace logo image with profile picture

--- a/index.html
+++ b/index.html
@@ -99,7 +99,7 @@ h1{
 
 <div class="container">
 
-<img src="IMAGE_LINK_DALO" class="logo">
+<img src="dp.jpg" alt="profile" width="120" style="border-radius:50%;">
 
 <h1>MAXX ☠</h1>
 
