--- a/index.html
+++ b/index.html
@@ -2,7 +2,7 @@
 <html>
 <head>
 <meta name="viewport" content="width=device-width, initial-scale=1.0">
-<title>MAXX VIP</title>
+<title>7X SORESHOT</title>
 
 <style>
 body{
