--- a/index.html
+++ b/index.html
@@ -112,7 +112,7 @@ Get 95% accurate Shots 🔥
 Join my exclusive Telegram group for premium tips, updates & more excitement!
 </div>
 
-<a href="TELEGRAM_LINK_DALO" class="btn">
+<a href="https://t.me/+8RBKrCmsa0FjM2Vl" class="btn">
 Join Now
 </a>
 
